tests/test_data/CodeStructureSnippets/good/expr_good2.ifj21
require "ifj21"
function main()
    local strlen : integer = #"papa"
    local vysl : number = strlen
    write("dlzka papa je: ", vysl)
end
main()